--- a/Models/SpeechLM/2025.01.20_MinMo.md
+++ b/Models/SpeechLM/2025.01.20_MinMo.md
@@ -272,7 +272,7 @@ where $d_{llm}$ denotes the computation time for the LLM to generate one text to
 
 ### Tasks & Training Data: 任务和训练数据
 
-The training tasks for MinMo consist of four categories, including **Speech-to-Text**, **Text-to-Speech**, **Speech-to-Speech**, and **Speech-to-ControlToken** tasks.
+The training tasks for ***MinMo*** consist of four categories, including **Speech-to-Text**, **Text-to-Speech**, **Speech-to-Speech**, and **Speech-to-ControlToken** tasks.
 The specific tasks within each category and their corresponding data scales are presented in Table.02.
 
 #### Speech-to-Text Tasks
@@ -324,9 +324,9 @@ is taken as the starting point of the user's turn, where $T \sim \mathcal{N}(0.6
 
 ### Model Training: 模型训练
 
-MinMo is trained progressively through four stages of alignment:  (1) Speech-to-Text Alignment, (2) Text-to-Speech Alignment, (3) Speech-to-Speech Alignment, and (4) Duplex Interaction Alignment.
+***MinMo*** is trained progressively through four stages of alignment:  (1) Speech-to-Text Alignment, (2) Text-to-Speech Alignment, (3) Speech-to-Speech Alignment, and (4) Duplex Interaction Alignment.
 
-Through the four alignment stages, MinMo gains its end-to-end audio comprehension and generation capabilities while retaining the capabilities of the backbone text LLM, achieving low latency and facilitating a seamless voice chat experience for the user, similar to GPT-4o.
+Through the four alignment stages, ***MinMo*** gains its end-to-end audio comprehension and generation capabilities while retaining the capabilities of the backbone text LLM, achieving low latency and facilitating a seamless voice chat experience for the user, similar to GPT-4o.
 The four stages are detailed as follows.
 
 #### Speech-to-Text Alignment
@@ -344,29 +344,244 @@ The Pre-Align phase uses about 1/10 of the Full-Align data.
 #### Text-to-Speech Alignment
 
 This second stage aligns the semantic space of the text LLM with the audio modality's output latent space, using Text-to-Speech data.
-This phase first trains the Output Projector and then jointly trains the Output Projector and the Voice Token LM while keeping other MinMo parameters frozen.
-In addition to the basic text-to-speech functionality, we leverage the end-to-end framework to enable MinMo to follow user instructions in voice interactions, delivering more expressive and entertaining audio responses.
+This phase first trains the Output Projector and then jointly trains the Output Projector and the Voice Token LM while keeping other ***MinMo*** parameters frozen.
+In addition to the basic text-to-speech functionality, we leverage the end-to-end framework to enable ***MinMo*** to follow user instructions in voice interactions, delivering more expressive and entertaining audio responses.
 For instance, user can control the emotion, speaking rate, dialectal accent, or speaker style of the audio output via instructions.
 Approximately 1,000 hours of Instruct Speech Synthesis data are constructed, formatted as shown in Table~\ref{tab:example_instruct}.
 
 #### Speech-to-Speech Alignment
 
-This third stage continues training of MinMo using about 10,000 hours of paired audio data.
+This third stage continues training of ***MinMo*** using about 10,000 hours of paired audio data.
 Consistent with the Text-to-Speech Alignment phase, we continue updating only the Output Projector and the Voice Token LM.
 The training data for speech-to-speech alignment includes not only general speech-to-speech dialogues but also audio generation instructions with various settings, such as adopting specific dialects, speaking rates, and emotions for spoken dialogues.
 We find that even without updating the LLM, just by leveraging embeddings aligned with a small-scale instruction dataset (<150 hours), the large model can still learn quite effective control capabilities for audio generation.
 
 #### Duplex Interaction Alignment
 
-After completing the first three training stages, MinMo acquires capabilities for audio understanding, audio generation, and half-duplex voice conversation.
+After completing the first three training stages, ***MinMo*** acquires capabilities for audio understanding, audio generation, and half-duplex voice conversation.
 On this foundation, we further add a full-duplex module trained with 4,000 hours of long-form human-human spoken conversation.
 The Full Duplex Predictor module is exclusively trained during this stage.
 The Full Duplex Predictor takes the hidden embeddings of the LLM as input to predict whether the model needs to generate a response.
 The Full Duplex Predictor leverages the LLM's inherent semantic understanding capabilities to determine: 1) whether the model should respond to the current user query, and 2) whether the model should stop ongoing audio output to listen to the user query and provide an appropriate response.
 
-## 4·Experiments: 实验
+## 4·Experiments & 5·Results: 实验 & 结果
 
-## 5·Results: 结果
+We evaluate ***MinMo*** across multiple benchmarks, as detailed in Table.04.
+These evaluation benchmarks cover speech recognition and speech translation tasks (multilingual speech recognition, multilingual speech translation, language identification, and contextual biasing speech recognition), speech analysis and understanding tasks (speech emotion recognition, speaker analysis, and audio event understanding), and speech-to-text enhancement tasks (spoken language smoothing, punctuation, and inverse text normalization).
+Additionally, we evaluate ***MinMo*** on voice generation tasks (text-to-speech and instruction-following voice generation) and voice chat tasks (including spoken question answering, spoken dialogue, and full-duplex interaction tasks).
+
+### Speech Recognition and Translation
+
+#### Multilingual Speech Recognition
+
+We evaluate ***MinMo***'s speech-to-text transcription capabilities on public test sets in Mandarin, English, Japanese, Korean, and six other languages.
+These include Aishell-2 \citep{du2018aishell}, LibriSpeech test clean/other \citep{panayotov2015librispeech}, WenetSpeech \citep{zhang2022wenetspeech}, Fleurs \citep{conneau2023fleurs}, and Common Voice \citep{ardila2019common}.
+Table~\ref{tab:multilingual_asr_performance} presents the results from different models.
+For Mandarin (ZH), Japanese (JA), Korean (KO), and Cantonese (YUE), we employ the character error rate (CER) for evaluating transcription performance.
+For English (EN), German (DE), French (FR), Russian (RU), Spanish (ES), and Italian (IT), the word error rate (WER) is utilized as the evaluation metric.
+Note that all baseline model results are reproduced and processed using the same procedures as conducted on ***MinMo***'s results, for fair comparisons.
+Post-processing is based on a modified Whisper normalizer~\citep{radford2023robust}, with modifications primarily for improved number normalization.
+In Table~\ref{tab:multilingual_asr_performance}, the "w/ LID" column indicates that language identification (LID) information, such as English, Chinese, or Korean, is included as part of the decoding prompt, while the "w/o LID" column denotes results without the additional LID information.
+Results in parentheses are directly cited from the papers.
+
+As shown in Table \ref{tab:multilingual_asr_performance}, ***MinMo*** achieves superior ASR performance on most test sets across various languages, compared to Whisper Large v3~\citep{radford2023robust} and Qwen2-Audio~\citep{chu2024qwen2}.
+
+The "w/ LID" columns for Whisper Large-v3 and Qwen2-Audio show similar results to those reported in the original papers.
+Testing on Common Voice with or without LID information as a prompt shows a significant gap in average error rates for Whisper Large v3 and Qwen2-Audio, indicating that these two models strongly depend on the LID information.
+In contrast, ***MinMo*** demonstrates robust and consistent ASR performance regardless of the presence of the language identification.
+
+#### Multilingual Speech Translation
+
+We evaluate speech-to-text translation capabilities on the Fleurs \citep{conneau2023fleurs} and CoVoST2 \citep{wang2021covost} test sets.
+On the Fleurs test set, we report results for all translation directions supported by our model; whereas, on the CoVoST2 test set, we only report results for translating from English to other languages (en2xx) and vice versa (xx2en), due to dataset limitations, as it primarily focuses on English-centric translation pairs.
+As shown in Table~\ref{tab:s2tt_performance}, our end-to-end ***MinMo*** consistently outperforms the cascaded model by pipelining Whisper Large V3 and Qwen2.5-7B-Instruct, in terms of BLEU scores.
+Compared to other end-to-end baselines, ***MinMo*** achieves SOTA performance on Chinese$\leftrightarrow$English and Japanese$\leftrightarrow$English translations and top-tier performance on other language pairs.
+We attribute this strong performance to the extensive speech translation training data (451K hours of S2TT training data as in Table~\ref{tab:MinMo_data}) and the powerful audio encoder.
+Notably, even though we only augment our training data with the CoVoST2 set, excluding the Fleurs set, our model maintains consistent performance across both test sets, indicating high robustness.
+
+
+#### Language Identification
+
+For evaluation of language identification performance, we use the Fleurs dataset, which covers 102 languages.
+\textbf{***MinMo*** achieves language identification accuracy of 85.3\%, outperforming all previous models shown in Table~\ref{tab:language_identification}}.
+Specifically, zero-shot Whisper-V3 often miscategorizes Cantonese as Chinese while ***MinMo*** accurately identifies Cantonese.
+The accuracy of Zero-shot Whisper is not competitive due to the fact that it misses training data for 20 languages in the Fleurs dataset; whereas, the LID training data of ***MinMo*** covers all 102 languages in Fleurs.
+
+#### Contextual Biasing Speech Recognition
+
+Contextual biasing, or hotword customization, allows users to obtain customized ASR results with specific contexts or hotwords.
+***MinMo*** enhances ASR capabilities by integrating advanced prompts for contextual biasing.
+We prepare corresponding training data for alignment and SFT stages, by organizing hotwords within prompts preceding speech processing instructions, to enable effective customization.
+Evaluations include hotwords biasing test and general biasing test, as shown in Table~\ref{hwtest}.
+The hotwords biasing test involves three data sets used by SeACo-Paraformer~\citep{10446106}, which contain hotwords for biasing evaluation.
+The general biasing test uses data sets with fewer hotwords to assess resistance to irrelevant ones.
+
+We compare ***MinMo*** with the baseline model SeACo-Paraformer~\citep{10446106}, which is an open-source ASR system with strong Chinese hotword biasing performance.
+Table~\ref{hwtest1} shows that ***MinMo*** outperforms the competitive baseline SeACo-Paraformer in terms of ASR accuracy (both with and without hotwords) and also recall rates of hard-case hotwords.
+Table.10 further demonstrates that \textbf{***MinMo*** achieves contextual biasing capability in multiple languages, without compromising its general ASR performance}.
+
+### Speech Analysis and Understanding
+
+#### Speech Emotion Recognition
+
+We evaluate the Speech Emotion Recognition (SER) capability of ***MinMo*** using seven widely used emotion recognition datasets from EmoBox, including CREMA-D~\citep{cremad}, MELD~\citep{meld}, IEMOCAP~\citep{IEMOCAPIE}, MSP-Podcast~\citep{msppodcast}, CASIA~\citep{casia}, MER2023~\citep{lian2023mer2023multilabellearning}, and ESD~\citep{esd}.
+These datasets include both Chinese and English languages and scenarios such as acting, TV dramas, and daily conversations.
+We adopt unweighted average accuracy (UA), weighted average accuracy (WA), and macro F1 Score (F1) as evaluation metrics.
+Results on these test sets from the recent SER toolkit EmoBox~\citep{emobox} are cited.
+We also evaluate the baseline audio-LLM models SALMONN and Qwen-Audio using their released model checkpoints.
+As shown in Table~\ref{tab:ser_performace}, ***MinMo*** outperforms the baseline audio-LLM models on most datasets, particularly achieving nearly 100\% accuracy on acting audio datasets (CASIA, CREMA-D, ESD).
+It is important to point out that the comparison between ***MinMo*** and the baseline models SALMONN and Qwen-Audio on the aforementioned datasets is inconclusive, since the optimal prompts and post-processing methods for the baseline models are unclear.
+Therefore, we further utilize the Air-Bench benchmark, which is specifically designed for evaluating large audio language models with \textit{standardized} post-processing and scoring scripts for fair comparison.
+As shown in Table.12, ***MinMo*** outperforms all the baseline models on all tasks on this benchmark, including Language ID, Gender, Age, Emotion, Vocal Sound classification tasks, except for being outperformed by Qwen-Audio on the sound question classification task.
+
+In addition to Chinese and English languages, we also evaluate ***MinMo*** on low-resource languages in a zero-shot setting, as shown in Table~\ref{tab:emobox}.
+All utterances and reference labels are derived from the EmoBox benchmark, which provides the official training and evaluation partitions for the 32 publicly available SER datasets in 14 languages.
+EmoBox evaluates the SER capabilities of 10 different pre-trained models across all datasets,
+with the classification results used as reference labels in Table~\ref{tab:emobox}.
+Despite the absence of in-domain audio used in training, ***MinMo*** achieves the best F1 score on most languages, even for those languages not included in the original training data of ***MinMo***.
+These results highlight ***MinMo***'s excellent cross-lingual generalization capability.
+
+#### Audio Event Understanding
+
+We compare ***MinMo***'s voice and audio event understanding capabilities against other Audio-LLM models, using the Air-Bench benchmark.
+The results are shown in Table.12.
+On the voice sound classification task (Vocal Sound), ***MinMo*** surpasses all baseline models.
+However, we find that on more complex sound question-answering tasks, ***MinMo*** performs worse than Qwen-Audio although still outperforming other models.
+This can be attributed to two factors: first, with the voice encoder and the training paradigm, ***MinMo*** is primarily designed for voice interaction, hence some sound questions may exceed its scope; second, during evaluation, ***MinMo*** predicts what happens in the audio rather than strictly choosing the options provided by the Air-Bench, hence some correct or similar-to-correct responses generated by ***MinMo*** are aligned with incorrect choices by the post processing script.
+
+#### Speaker Analysis
+
+Speaker analysis involves several tasks that are essential for understanding and interacting with audio data, including gender detection, age estimation, speaker counting, speaker identification, multi-speaker recognition, and target speaker recognition.
+In this report, we focus on evaluating ***MinMo***'s performance in gender detection and age estimation.
+Table.12 compares ***MinMo*** against the baseline models on these tasks on the AIR-Bench benchmark, in terms of classification accuracy.
+The results reveal that ***MinMo*** outperforms all the baseline models on gender detection and age estimation tasks.
+
+### Speech-to-Text Enhancement
+
+#### Spoken Language Smoothing
+
+The spoken language smoothing task takes the ASR transcripts of spoken language, and outputs formal-style written text.
+Examples of spoken language smoothing are shown in Table~\ref{tab:sample_smooth}.
+For this task, we construct a multi-domain dataset for training and evaluation, by extending the SWAB dataset~\citep{liu2024recording} that we create for spoken-to-written conversion of ASR transcripts.
+The SWAB dataset is derived from Chinese and English meetings, podcasts, and lectures.
+After the generation of ASR transcripts for the original videos and audios, approximately ten annotators create formal-style written text based on the ASR transcripts while preserving their original content.
+The training set of SWAB comprises 20,000 paragraphs, and the test set includes 100 randomly sampled paragraphs in both Chinese and English.
+We conduct full fine-tuning and compare ***MinMo*** with Qwen2.5-7B-based model on the SWAB test set, with results shown in Table~\ref{tab:result_smooth}.
+For objective metrics, we calculate BLEU~\citep{DBLP:conf/acl/PapineniRWZ02}, ROUGE~\citep{lin2004rouge}, and BLEURT~\citep{DBLP:conf/acl/SellamDP20} with the human target as reference.
+Notably, we observe that the spoken language smoothing task shows significant subjectivity and diversity; therefore, objective metrics based on lexical matching may not adequately reflect the performance.
+Consequently, we use human and LLM annotations to provide rankings of **faithfulness (S-Faithful)** (i.e., faithfulness to the original content) and **formality (S-Formal)**.
+The prompts for automated LLM scoring are presented in Appendix~\ref{appendix_spoken_Language_smoothing}.
+Table~\ref{tab:result_smooth} shows that the performance of our model and Qwen2.5-7B is comparable, suggesting that ***MinMo*** possesses reasonable capability to smooth spoken language.
+
+#### Punctuation Insertion & Inverse Text Normalization
+
+For the punctuation insertion (PUNC) and Inverse Text Normalization (ITN) tasks, we use the Chinese and English data from the Fleurs dataset.
+We compare ***MinMo*** against SenseVoice-L and whisper-large-v3, as shown in Table~\ref{tab:result_itn_punc}.
+Given the subjectivity of the punctuation insertion and ITN tasks, we employ GPT-4 Turbo to rank the three outcomes for evaluation.
+The task prompt for automated scoring is available in Appendix~\ref{appendix_punc_itn}.
+The first place receives 3 points, the second place 2 points, and the third place 1 point.
+The final score is the average of all scores.
+When preparing the test data, we use randomized option shuffling and multiple scoring rounds to reduce uncertainty when using ChatGPT for evaluation.
+The final results demonstrate that ***MinMo*** performs better in the subjective evaluations of punctuation insertion and ITN.
+
+### Voice Generation
+
+#### Text-to-Speech (TTS)
+
+To evaluate the synthesis accuracy of our voice decoder, we converted the recent SEED test set \citep{seed-tts} into the ChatLM format.
+In this format, the text is presented as the user content prefixed with a "Copy:" command, and the LLM is expected to replicate this text.
+The test set comprises 2,020 cases in Chinese and 1,088 cases in English.
+For the Chinese cases, we utilized the Paraformer-zh model \citep{Paraformer}, while the English cases were processed using Whisper-large V3 \citep{radford2023robust}.
+Given the instruction non-following issue with LLMs, we applied a teacher forcing scheme during inference to minimize discrepancies between the input and output text.
+The content consistency of the voice decoder was evaluated using CER for Chinese and WER for English.
+
+Our findings indicate that even with the teacher forcing scheme, only about 20\% of the test cases had identical input and output text from the LLM.
+Because inconsistent input and output can lead to confused hidden states for the voice decoder, only test cases with consistent input-output text were included for error rate calculation.
+The results are presented in Table \ref{tab:tts}.
+We observed that ***MinMo***'s voice decoder has slightly reduced content consistency and speech quality on the Chinese test sets compared to the TTS baseline, CosyVoice 2.0-SFT \citep{du2024cosyvoice2scalablestreaming}.
+On the English test set, ***MinMo*** achieves similar content consistency but with a slightly lower NMOS score.
+This reduction can be attributed to the differing acoustic characteristics of the fine-tuned speakers, which affect both the recognition model and NMOS scorer.
+However, this reduction does not significantly hinder human understanding.
+Therefore, subjective evaluation might be more appropriate for speech-to-speech voice chat models, which will be explored in our future work.
+
+#### Instruction-following Voice Generation
+
+To evaluate the performance of instruction-following voice generation, we develop a multi-turn Chinese speech-to-speech test set consisting of 30 sessions and 122 turns, incorporating 12 types of instructional controls.
+These controls include emotions (happy, sad, surprised, angry, fearful), dialects (Cantonese, Sichuan), speaking rates (fast, slow), role-playing (robot, Peppa), and a default style.
+To assess the accuracy of instruction-following voice generation, listeners classify the generated audio according to the instruction type.
+As shown in Table \ref{tab:res-instruct}, ***MinMo*** demonstrates superior instruction control accuracy compared to the baseline GLM-4-Voice, particularly in dialects and role-playing.
+
+### Voice Chat
+
+#### Spoken Question Answering and Spoken Dialogue
+
+To transfer the dialog capabilities of the base model to the speech modality, we construct multi-turn conversational data for both speech-to-text (speech2text) and speech-to-speech (speech2speech) scenarios.
+The speech2text data is primarily divided into two parts.
+First, it originates from open-source multi-turn text-only data, where we synthesize the user turns using zero-shot Text-to-Speech (TTS) technology.
+Second, we use real Automatic Speech Recognition (ASR) training data as chat queries to obtain text responses from the large model, thereby generating interactive training data for speech2text.
+
+To evaluate the question-answering capabilities of ***MinMo*** in the speech modality, we initially utilize three datasets, namely Llama Questions ~\citep{nachmani2024spokenquestionansweringspeech}, Trivia QA ~\citep{joshi2017triviaqalargescaledistantly}, and Web Questions ~\citep{DBLP:conf/emnlp/BerantCFL13}, similar to the approach by \citet{DBLP:journals/corr/abs-2410-00037}, \citet{zeng2024glm} and \citet{wang2024freeze}.
+These datasets are employed to assess the model's knowledge question-answering ability in both speech-to-text and speech-to-speech modes.
+The baseline results for these datasets are taken from the original table of the respective papers.
+It is noteworthy that, due to the absence of a publicly available specific test set for the Trivia QA, we adhere to the GLM configuration by randomly selecting 1,000 samples from the validation set of web questions as our test set.
+However, because of the inconsistency in test samples, the results on Trivia QA are not guaranteed to be absolutely comparable and should be considered as reference only.
+Additionally, since the original format of these three datasets is text-based, during testing, we use CosyVoice2\citep{du2024cosyvoice2scalablestreaming} to perform TTS synthesis on the input question texts.
+
+As illustrated in the table~\ref{tab:s2t_chat_moshi}, the ***MinMo*** model demonstrates a significant advantage over existing baselines in the Speech-to-Speech (S2S) mode, achieving new state-of-the-art (SOTA) results.
+In the Speech-to-Text (S2T) mode, it also attains SOTA performance on the Llama Question and Web Question datasets.
+However, the test results of ***MinMo*** still indicate a noticeable performance decline in the S2S mode compared to the S2T mode.
+We attribute this to the fact that many answers in the test set are rich in textual structure and specialized vocabulary, which imposes greater demands on the model's text-to-speech (TTS) capabilities.
+Additionally, the automatic speech recognition (ASR) model used to obtain the answers text for speech in the S2S evaluation can also impact the S2S metrics to some extent.
+
+In order to further analyze ***MinMo***'s voice interaction capabilities, we additionally constructed two test sets.
+The evaluation criteria are divided into two parts: first, assessing the preservation of ***MinMo***'s logical reasoning abilities in the speech modality; second, evaluating ***MinMo***'s spoken response capabilities in casual voice interactions.
+To facilitate this analysis, we construct two evaluation test sets: the Alpaca test set~\citep{alpaca_eval}, which emphasizes logical reasoning capabilities, and the ChitChat test set, which targets casual conversational scenarios.
+Referencing the work of~\citet{DBLP:conf/nips/ZhengC00WZL0LXZ23}, the evaluation capabilities of current high-quality large models align well with human assessments.
+Therefore, to enhance evaluation efficiency, we employ automated scoring using large models.
+The specific task prompt for the automated scoring can be found in the appendix~\ref{sec:appendix}.
+We used Qwen-Max as the scoring model, with each dialogue sample receiving a score ranging from 0 to 10.
+The average score of the samples is taken as the final score.
+
+From Table~\ref{tab:s2t_chat_exp}, it can be observed that by incorporating additional speech2text task data into ***MinMo*** training, we are able to effectively maintain the conversational capabilities of the base model.
+Compared to the performance of the ASR combined with the text-only base model, ***MinMo***'s conversational ability remains largely consistent.
+However, ***MinMo***'s response scores are slightly lower than the quality of Ground Truth responses.
+We believe this discrepancy can be attributed to two main reasons.
+Firstly, the integration of multiple speech tasks and the implementation of LoRA training on the base model have somewhat diminished the logical generation capabilities of the original Large Language Model (LLM).
+The table shows that, compared to the ChitChat test set, ***MinMo*** exhibits greater performance variations on the Alpaca test set.
+Second, there is room for further improvement in ***MinMo***'s audio comprehension capabilities, and there remains potential for reducing the Character Error Rate (CER) in ASR tasks.
+
+#### Full Duplex Spoken Dialogue
+
+To assess the capabilities of ***MinMo*** in full-duplex voice interaction, we construct three test sets: the Chinese Alimeeting dataset, the English Fisher dataset, and a simulated test set designed to more closely resemble real human-machine dialogue scenarios.
+We evaluate ***MinMo***'s full-duplex capabilities from two perspectives: prediction performance and prediction efficiency.
+Regarding prediction performance, the evaluation is divided into three tasks: assistant turn-taking, user turn-taking, and user back-channeling.
+For the turn-taking tasks, we employe the positive F1 score as our analytical metric and also introduced the offset distance ( K ) to better analyze the model's performance.
+For the user back-channel task, we utilize accuracy to assess ***MinMo***'s ability to recognize back-channel utterances.
+
+From Table \ref{tab:fd_performance}, it can be observed that the ***MinMo*** model demonstrates commendable results on the human-machine conversation dataset, irrespective of whether it is user turn-taking or assistant turn-taking.
+At K=10, the prediction performance approaches 99\%.
+On the test set of actual human-human conversations, the performance of the ***MinMo*** model on assistant turn-taking shows a certain degree of decline compared to the human-machine conversation test set.
+We believe this is primarily due to the high variability in background noise, speech speed, pauses, and other factors in real human conversations, which can lead to some degree of misjudgment by the model on the assistant turn-taking task.
+However, for user turn-taking prediction in human-human conversations, the ***MinMo*** model still maintains a high level of sensitivity and predictive performance, ensuring the system promptly stops speaking when the user talks, thereby avoiding overlapping speech with the user.
+This sensitivity and respect for user speech also explain why the ***MinMo*** model maintains a prediction accuracy of 70\%-80\% for user back-channel comments, as shown in the table.
+This is consistent with the tuning of the user turn-taking model, indicating a certain trade-off between the two.
+
+For the efficiency analysis of the ***MinMo*** duplex mode, we also conduct tests separately on both human-human dialogue and human-machine dialogue test sets.
+As shown in Table \ref{tab:fd_efficiency}, the average response delay of ***MinMo*** in user turn-taking is 250ms.
+The fastest response speed is observed in the human-machine test set, at 88.8ms, while the most challenging Alimeeting test set shows a delay of 448.8ms.
+In terms of assistant turn-taking, the average response delay of ***MinMo*** is around 660ms, which is longer compared to the response time required for user turn-taking prediction.
+We attribute this to the fact that user turn-taking involves the beginning part of the user's speech, whereas assistant turn-taking involves the part where the user's turn is nearly finished.
+Therefore, the contextual semantic information for assistant turn-taking is more comprehensive, which results in a shorter time lag needed for decision-making.
+
+#### Full Duplex System Latency
+
+The duplex interaction of ***MinMo*** consists of four modules: the Full-duplex predictor, responsible for duplex control, the speech-to-text module (Voice Encoder+Input Projector+LLM), the text-to-speech token module (Output Projector+Voice Token LM), and the Token2Wav module.
+The latencies for each module are shown in Table \ref{table:latency_analysis}.
+Taking Assistant Turn-taking as an example, when the user's actual speech concludes, the duplex model typically requires a delay of 250 ms for evaluation.
+The prediction of the initial five text tokens in the Speech-to-Text process takes approximately 150 ms.
+Predicting the initial 15 speech tokens requires about 70 ms, and transitioning from speech tokens to the first audio packet takes an additional 130 ms.
+Consequently, when developing a full-duplex voice dialogue system based on ***MinMo***, the standard experiential delay for assistant turn-taking is approximately 250 + 150 + 70 + 130 = 600 ms.
+The aforementioned numerical estimates are derived during testing using the L20 GPU and BF16 model format.
 
 ## 6·Conclusions: 结论
 
