move Qwen2-Audio

--- a/Models/SpokenDialogue/2024.07.15_Qwen2-Audio.md
+++ b/Models/SpokenDialogue/2024.07.15_Qwen2-Audio.md
@@ -21,7 +21,7 @@
   - [ArXiv](https://arxiv.org/abs/2407.10759)
   - [Publication]()
   - [Github](https://github.com/QwenLM/Qwen2-Audio)
-  - [Demo]()
+  - [Demo](https://qwenlm.github.io/blog/qwen2-audio/)
 - 文件:
   - [ArXiv](_PDF/2407.10759v1__Qwen2-Audio__Technical_Report.pdf)
   - [Publication] #TODO
